[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Create and manage Kubernetes clusters on AWS using Terraform."
homepage = "https://github.com/InQuicker/kaws"
keywords = ["kubernetes", "coreos", "aws", "terraform", "infrastructure"]
license = "MIT"
name = "kaws"
readme = "README.md"
repository = "https://github.com/InQuicker/kaws"
version = "0.7.0"

[dependencies]
ansi_term = "0.9.0"
clap = "2.25.1"
env_logger = "0.4.3"
hyper = "0.11.1"
log = "0.3.8"
rustc-serialize = "0.3.24"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
tempdir = "0.3.5"

[dependencies.rusoto]
features = ["kms"]
version = "0.24.0"
