[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Server-side agent for the kaws crate."
homepage = "https://github.com/InQuicker/kaws"
keywords = ["kubernetes", "coreos", "aws", "terraform", "infrastructure"]
license = "MIT"
name = "kaws-agent"
readme = "README.md"
repository = "https://github.com/InQuicker/kaws"
version = "0.1.0"

[dependencies]
clap = "2.2.5"
etcd = "0.5.1"
rustc-serialize = "0.3.19"

[dependencies.rusoto]
features = ["kms"]
git = "https://github.com/rusoto/rusoto.git"
