[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Server-side agent for the kaws crate."
homepage = "https://github.com/InQuicker/kaws"
keywords = ["kubernetes", "coreos", "aws", "terraform", "infrastructure"]
license = "MIT"
name = "kaws-agent"
readme = "README.md"
repository = "https://github.com/InQuicker/kaws"
version = "0.1.0"

[dependencies]
clap = "2.4.0"
env_logger = "0.3.3"
etcd = "0.5.3"
rustc-serialize = "0.3.19"

[dependencies.rusoto]
features = ["kms"]
version = "0.13.0"
